tests/baselines/reference/interMixingModulesInterfaces1.errors.txt
interMixingModulesInterfaces1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
interMixingModulesInterfaces1.ts(8,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== interMixingModulesInterfaces1.ts (2 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        export interface B {
            name: string;
            value: number;
        }
    
        export module B {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export function createB(): B {
                return null;
            }
        }
    }
    
    var x: A.B = A.B.createB();